2008-05-05  Arek Korbik  <arkadini@gmail.com>

	* po/POTFILES.in:
	Update filename: test_bundle.py -> test_common_bundle.py.

2008-05-05  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/plugs/cortado/Makefile.am:
	* flumotion/component/plugs/cortado/cortado.xml:
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	* flumotion/component/encoders/dirac/dirac.xml:
	* flumotion/component/encoders/dirac/wizard.glade:
	* flumotion/component/encoders/dirac/wizard_gtk.py:
	* flumotion/component/encoders/theora/theora.xml:
	* flumotion/component/encoders/theora/wizard.glade:
	* flumotion/component/encoders/theora/wizard_gtk.py:
	* flumotion/component/encoders/speex/speex.xml:
	* flumotion/component/encoders/speex/wizard_gtk.py:
	* flumotion/component/encoders/vorbis/vorbis.xml:
	* flumotion/component/encoders/vorbis/wizard.glade:
	* flumotion/component/encoders/vorbis/wizard_gtk.py:
	* flumotion/component/encoders/jpeg/jpeg.xml:
	* flumotion/component/encoders/jpeg/wizard.glade:
	* flumotion/component/encoders/jpeg/wizard_gtk.py:
	* flumotion/component/encoders/mulaw/mulaw.xml:
	* flumotion/component/encoders/mulaw/wizard.glade:
	* flumotion/component/encoders/mulaw/wizard_gtk.py:
	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/smoke/wizard.glade:
	* flumotion/component/encoders/smoke/wizard_gtk.py:
	* flumotion/component/encoders/smoke/smoke.xml:
	* flumotion/component/producers/bttv/Makefile.am:
	* flumotion/component/producers/bttv/wizard.glade:
	* flumotion/component/producers/bttv/wizard_gtk.py:
	* flumotion/component/producers/bttv/bttv.xml:
	* flumotion/component/producers/soundcard/soundcard.xml:
	* flumotion/component/producers/soundcard/Makefile.am:
	* flumotion/component/producers/soundcard/wizard.glade:
	* flumotion/component/producers/soundcard/wizard_gtk.py:
	* flumotion/component/producers/webcam/Makefile.am:
	* flumotion/component/producers/webcam/wizard.glade:
	* flumotion/component/producers/webcam/wizard_gtk.py: